# sam

./: .arcconfig  .arclint  .config.example  .gitignore  .pypirc  .readthedocs.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build-package.yml  conftest.py  pyproject.toml  run-linting.yml  setup.cfg  setup.py
.github/workflows/: doctest  linting.yml  python-publish.yml  unittest.yml
data/: rainbow_beach.parquet
docs/: RFC_Feature_engineering.md  requirements.txt
docs/source/: conf.py  data.rst  data_sources.rst  datasets.rst  examples.rst  exploration.rst  feature_engineering.rst  feature_selection.rst  general_documents.rst  index.rst  intro.rst  metrics.rst  minimumviableproject.rst  models.rst  preprocessing.rst  project.rst  samquantiledemo.rst  train_models.rst  utils.rst  validation.rst  visualization.rst
docs/source/general_documents/: anomaly_detection.md  data_exploration.md  data_storage.md  feature_extraction.md  kafka_client.html  kafka_python.rst  production_platform.md  project_approach.md  tsfresh.md  weather_features.md
docs/source/projects/: SamQuantileMLPdemo.html  minimumviableproject.html  nereda.md
examples/: SamQuantileMLPdemo.ipynb  feature_engineering.ipynb  kafka_client.ipynb  lasso.ipynb  minimumviableproject.ipynb  mlp.ipynb
pipelines/: build-documentation.yml  build-package.yml  run-linting.yml  run-unittests.yml
sam/: __init__.py
sam/data_sources/: __init__.py  deprecated.py  knmy_stations.py  mongo_wrapper.py  synthetic_data.py  weather.py
sam/data_sources/tests/: test_create_synthetic_timeseries.py  test_mongo.py  test_synthetic_date_range.py  test_synthetic_timeseries.py  test_weather.py
sam/data_sources/weather/: __init__.py  knmi.py  knmi_stations.py  openweathermap.py  regenradar.py  utils.py
sam/datasets/: __init__.py  datasets.py
sam/datasets/data/: rainbow_beach.csv  sewage_data.csv  sewage_data.parquet
sam/datasets/tests/: test_datasets.py
sam/exploration/: __init__.py  find_incidents.py  lag_correlation.py  signalaligner.py  top_correlation.py
sam/exploration/tests/: test_create_lag_correlation.py  test_find_incidents.py  test_retrieve_top_n_correlations.py  test_retrieve_top_score_correlations.py  test_signalaligner.py
sam/feature_engineering/: __init__.py  automatic_rolling_engineering.py  base_feature_engineering.py  build_timefeatures.py  decompose_datetime.py  deprecated.py  lag_range.py  rolling_features.py  simple_feature_engineering.py  weather_spei.py
sam/feature_engineering/tests/: test_automatic_feature_engineering.py  test_base_feature_engineering.py  test_build_timefeatures.py  test_decompose_datetime.py  test_range_lag.py  test_rolling_features.py  test_simple_feature_engineering.py
sam/feature_selection/: __init__.py  deprecated.py  lag_correlation.py  top_correlation.py
sam/feature_selection/tests/: test_create_lag_correlation.py  test_retrieve_top_n_correlations.py  test_retrieve_top_score_correlations.py
sam/logging/: __init__.py  dataframe_characteristics.py  new_columns.py
sam/logging_functions/: __init__.py  dataframe_characteristics.py  new_columns.py
sam/metrics/: __init__.py  custom_callbacks.py  incident_recall.py  keras_metrics.py  mase.py  quantile_evaluation.py  r2_calculation.py  tilted_loss.py  tilted_loss_metrics.py  train_mean_r2.py
sam/metrics/tests/: test_incident_recall.py  test_keras_metrics.py  test_mase.py  test_quantile_metrics.py  test_quantile_ratios.py  test_tilted_loss.py  test_tilted_loss_metrics.py  test_train_mean_r2.py  test_train_r2.py
sam/models/: LinearQuantileRegression.py  SamQuantileMLP.py  TimeseriesMLP.py  __init__.py  base_model.py  benchmark.py  constant_model.py  keras_templates.py  lasso_model.py  linear_model.py  mlp_model.py  sam_shap_explainer.py  spc_model.py  utils.py
sam/models/tests/: test_mlp.py  (+7 more)
sam/preprocessing/: __init__.py  __init__.py.orig  clip_transformer.py  complete_timestamps.py  correct_extremes.py  data_scaling.py  data_scaling.py.orig  deprecated.py  differencing.py  normalize_timestamps.py  rnn_reshape.py  sam_reshape.py  time.py  train_test_split.py
sam/tests/: test_deprecated.py
sam/train_models/: __init__.py  deprecated.py  find_outliers.py
sam/utils/: __init__.py  dataframe_functions.py  deprecated.py  frequencies.py  json_helpers.py  mongo_wrapper.py  score_importance.py  sklearnhelpers.py  time.py  warnings.py
sam/validation/: __init__.py  base_validator.py  find_extremes.py  find_flatlines.py  flatline_validator.py  mad_validator.py  outside_range_validator.py  setup_validation_pipeline.py
sam/visualization/: __init__.py  deprecated.py  diagnostic_flatline_removal.py  extreme_removal_plot.py  incident_heatmap.py  performance_evaluation_fixed_predict_ahead.py  plot_feature_importances.py  precision_recall.py  quantile_feature_importances.py  quantile_plot.py  rolling_correlations.py  threshold_plot.py
(+32 files in other folders)
