[build-system]
requires = ["setuptools>=42", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "sam",
    "sam.data_sources",
    "sam.data_sources.weather",
    "sam.datasets",
    "sam.datasets.data",
    "sam.exploration",
    "sam.feature_engineering",
    "sam.logging_functions",
    "sam.metrics",
    "sam.models",
    "sam.preprocessing",
    "sam.utils",
    "sam.validation",
    "sam.visualization"
]

[project]
name = "sam"
version = "5.0.0"
description = "Time series anomaly detection and forecasting"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Royal HaskoningDHV", email = "ruben.peters@rhdhv.com"}]
keywords = ["python", "data-science", "time-series", "forecasting", "anomaly-detection", "asset-management"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["pandas~=2.2", "numpy~=1.26", "scikit-learn~=1.5.2"]

[project.optional-dependencies]
all = [
    "matplotlib",
    "cloudpickle",
    "nfft",
    "pymongo",
    "requests",
    "scipy~=1.13.1",
    "seaborn",
    "tensorflow~=2.17,<3",
    "Jinja2~=3.0.3",
    "onnx~=1.16.1",
    "onnxruntime~=1.19.2",
    "tf2onnx~=1.16.1",
    "shap",
    "plotly",
    "statsmodels"
]
plotting = ["matplotlib", "plotly", "seaborn"]
data-engineering = ["requests", "pymongo"]
data-science = [
    "tensorflow~=2.17,<3",
    "cloudpickle",
    "onnx~=1.16.1",
    "onnxruntime~=1.19.2",
    "tf2onnx~=1.16.1",
    "nfft",
    "scipy~=1.13.1",
    "shap",
    "Jinja2~=3.0.3",
    "statsmodels"
]
test = ["pytest", "pytest-cov", "pytest-mpl<=0.15.0", "fastparquet"]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "numpydoc",
    "recommonmark",
    "readthedocs-sphinx-search",
    "sphinx-markdown-tables",
    "toml",
    "tensorflow~=2.17,<3",
]

[project.urls]
homepage = "https://github.com/RoyalHaskoningDHV/sam"
issues = "https://github.com/RoyalHaskoningDHV/sam/issues"
discussions = "https://github.com/RoyalHaskoningDHV/sam/discussions"
documentation = "https://sam-rhdhv.readthedocs.io/en/latest/"

[tool.black]
line-length = 99
target-version = ['py39', 'py310']

[tool.isort]
profile = "black"