[pycodestyle]
max-line-length = 99
exclude = .ipynb_checkpoints

[pep8]
max-line-length = 99
exclude = .ipynb_checkpoints

[flake8]
max-line-length = 99
extend-ignore = E203
exclude = .ipynb_checkpoints
max-complexity = 10

[metadata]
description-file = README.md
major-version = 2.5
minor-version = 0
